--- a/app/src/main/res/layout/chat_card_view.xml
+++ b/app/src/main/res/layout/chat_card_view.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="@dimen/card_height"
     android:id="@+id/card_holder">
     <RelativeLayout
         android:layout_width="match_parent"
