--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,10 +4,14 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
+    <dimen name="profile_card_padding">20dp</dimen>
     <dimen name="profile_pic_size">40dp</dimen>
     <dimen name="list_item_1">24sp</dimen>
     <dimen name="check_box_holder_width">64dp</dimen>
     <dimen name="card_height">64dp</dimen>
     <dimen name="list_item_2">16sp</dimen>
     <dimen name="divider_length">330dp</dimen>
+    <dimen name="profile_pic_full">180dp</dimen>
+    <dimen name="app_bar_height">240dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
