--- a/app/src/main/res/layout/content_chats_profile.xml
+++ b/app/src/main/res/layout/content_chats_profile.xml
@@ -53,5 +53,13 @@
                 android:padding="@dimen/profile_card_padding"
                 android:textSize="@dimen/list_item_2"/>
         </android.support.v7.widget.CardView>
+        <Button
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="Force Crash!"
+            android:onClick="forceCrash"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
+
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
